--- a/package.json
+++ b/package.json
@@ -84,5 +84,7 @@
     "watchdog": "^0.8.10",
     "wechaty-puppet": "^0.2.10"
   },
-  "dependencies": {}
+  "dependencies": {
+    "qr-image": "^3.2.0"
+  }
 }
