--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@types/normalize-package-data": "^2.4.0",
     "@types/qr-image": "^3.2.1",
     "@types/read-pkg-up": "^3.0.1",
+    "@types/request": "^2.47.1",
     "@types/semver": "^5.5.0",
     "blue-tape": "^1.0.0",
     "brolog": "^1.6.5",
@@ -85,6 +86,7 @@
     "wechaty-puppet": "^0.2.10"
   },
   "dependencies": {
-    "qr-image": "^3.2.0"
+    "qr-image": "^3.2.0",
+    "request": "^2.87.0"
   }
 }
