--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
   "homepage": "https://github.com/lym152898/wechaty-puppet-ioscat#readme",
   "devDependencies": {
     "@types/blue-tape": "^0.1.31",
+    "@types/fs-extra": "^5.0.4",
     "@types/lru-cache": "^4.1.1",
     "@types/node": "^10.3.6",
     "@types/normalize-package-data": "^2.4.0",
@@ -87,6 +88,8 @@
     "wechaty-puppet": "^0.2.10"
   },
   "dependencies": {
+    "flash-store": "^0.5.4",
+    "fs-extra": "^6.0.1",
     "qr-image": "^3.2.0",
     "request": "^2.87.0"
   }
