--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
   },
   "homepage": "https://github.com/lym152898/wechaty-puppet-ioscat#readme",
   "devDependencies": {
+    "@types/amqplib": "^0.5.8",
     "@types/blue-tape": "^0.1.31",
     "@types/fs-extra": "^5.0.4",
     "@types/lru-cache": "^4.1.1",
@@ -69,7 +70,7 @@
     "typescript": "^2.9.2",
     "watchdog": "^0.8.10",
     "wechaty": "^0.17.108",
-    "wechaty-puppet": "0.3.3"
+    "wechaty-puppet": "^0.8.5"
   },
   "git": {
     "scripts": {
@@ -88,6 +89,7 @@
     "wechaty-puppet": "^0.2.10"
   },
   "dependencies": {
+    "amqplib": "^0.5.2",
     "flash-store": "^0.5.4",
     "fs-extra": "^6.0.1",
     "qr-image": "^3.2.0",
