--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "pack": "npm pack",
     "lint": "npm run lint:ts && npm run lint:md",
     "lint:md": "markdownlint README.md",
-    "lint:ts": "tslint --project tsconfig.json && tsc --noEmit",
+    "lint:ts": "tslint --project tsconfig.json --exclude src/api.ts && tsc --noEmit",
     "test": "npm run lint && npm run test:unit",
     "test:pack": "bash -x scripts/npm-pack-testing.sh",
     "test:unit": "blue-tape -r ts-node/register \"src/**/*.spec.ts\" \"src/*.spec.ts\" \"tests/*.spec.ts\" \"tests/**/*.spec.ts\""
