--- a/package.json
+++ b/package.json
@@ -93,6 +93,7 @@
     "flash-store": "^0.5.4",
     "fs-extra": "^6.0.1",
     "qr-image": "^3.2.0",
-    "request": "^2.87.0"
+    "request": "^2.87.0",
+    "xml2json": "^0.11.2"
   }
 }
