--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
     "wechaty": ">=0.17.46"
   },
   "scripts": {
-    "clean": "shx rm -fr dist/*",
+    "clean": "shx rm -fr dist/* generated/*",
     "dist": "npm run clean && tsc",
+    "generate": "bash -x scripts/generate.sh",
     "pack": "npm pack",
     "lint": "npm run lint:ts && npm run lint:md",
     "lint:md": "markdownlint README.md",
@@ -64,13 +65,15 @@
     "semver": "^5.5.0",
     "shx": "^0.3.1",
     "state-switch": "^0.6.2",
+    "swagger-ts-client-generator": "^1.13.1",
     "ts-node": "^7.0.0",
     "tslint": "^5.10.0",
     "tslint-config-standard": "^7.1.0",
     "typescript": "^2.9.2",
     "watchdog": "^0.8.10",
     "wechaty": "^0.17.108",
-    "wechaty-puppet": "^0.8.5"
+    "wechaty-puppet": "^0.8.5",
+    "yamljs": "^0.3.0"
   },
   "git": {
     "scripts": {
