--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "pack": "npm pack",
     "lint": "npm run lint:ts && npm run lint:md",
     "lint:md": "markdownlint README.md",
-    "lint:ts": "tslint --project tsconfig.json --exclude src/api.ts && tsc --noEmit",
+    "lint:ts": "tslint --project tsconfig.json && tsc --noEmit",
     "test": "npm run lint && npm run test:unit",
     "test:pack": "bash -x scripts/npm-pack-testing.sh",
     "test:unit": "blue-tape -r ts-node/register \"src/**/*.spec.ts\" \"src/*.spec.ts\" \"tests/*.spec.ts\" \"tests/**/*.spec.ts\""
@@ -65,15 +65,13 @@
     "semver": "^5.5.0",
     "shx": "^0.3.1",
     "state-switch": "^0.6.2",
-    "swagger-ts-client-generator": "^1.13.1",
     "ts-node": "^7.0.0",
     "tslint": "^5.10.0",
     "tslint-config-standard": "^7.1.0",
     "typescript": "^2.9.2",
     "watchdog": "^0.8.10",
     "wechaty": "^0.17.108",
-    "wechaty-puppet": "^0.8.5",
-    "yamljs": "^0.3.0"
+    "wechaty-puppet": "^0.8.5"
   },
   "git": {
     "scripts": {
