--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
     , "outDir": "dist"
     , "declaration": true
     , "sourceMap": true
-    , "strict": false
+    , "strict": true
     , "traceResolution": false
     , "esModuleInterop" : true
     , "resolveJsonModule": true
