--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@types/node": "^10.5.5",
     "@types/normalize-package-data": "^2.4.0",
     "@types/qr-image": "^3.2.1",
+    "@types/raven": "^2.5.1",
     "@types/read-pkg-up": "^3.0.1",
     "@types/request": "^2.47.1",
     "@types/semver": "^5.5.0",
