--- a/.travis.yml
+++ b/.travis.yml
@@ -34,6 +34,7 @@ jobs:
       script:
         - echo "NPM Pack Testing Started ..."
         - npm version
+        - npm run generate
         - npm run test:pack
         - echo "NPM Pack Testing Finished."
 
@@ -42,6 +43,7 @@ jobs:
         - echo "NPM Deploying Started ..."
         - npm version
         - if ./scripts/development-release.ts; then ./scripts/package-publish-config-tag-next.ts; fi
+        - npm run generate
         - npm run dist
         - echo "NPM Building Finished."
 
