--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "@types/read-pkg-up": "^3.0.1",
     "@types/request": "^2.47.1",
     "@types/semver": "^5.5.0",
+    "@types/xml2json": "^0.10.0",
     "blue-tape": "^1.0.0",
     "brolog": "^1.6.5",
     "file-box": "^0.8.22",
@@ -93,6 +94,7 @@
   "dependencies": {
     "amqp": "^0.2.7",
     "amqplib": "^0.5.2",
+    "array-flatten": "^2.1.1",
     "flash-store": "^0.5.4",
     "fs-extra": "^6.0.1",
     "qr-image": "^3.2.0",
