--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
   "devDependencies": {
     "@types/amqplib": "^0.5.8",
     "@types/blue-tape": "^0.1.31",
+    "@types/deep-equal": "^1.0.1",
     "@types/fs-extra": "^5.0.4",
     "@types/lru-cache": "^4.1.1",
     "@types/node": "^10.5.5",
@@ -96,6 +97,7 @@
     "amqp": "^0.2.7",
     "amqplib": "^0.5.2",
     "array-flatten": "^2.1.1",
+    "deep-equal": "^1.0.1",
     "flash-store": "^0.5.4",
     "fs-extra": "^6.0.1",
     "qr-image": "^3.2.0",
