--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "@types/read-pkg-up": "^3.0.1",
     "@types/request": "^2.47.1",
     "@types/semver": "^5.5.0",
+    "@types/xml2js": "^0.4.3",
     "@types/xml2json": "^0.10.0",
     "blue-tape": "^1.0.0",
     "brolog": "^1.6.5",
@@ -102,6 +103,7 @@
     "fs-extra": "^6.0.1",
     "qr-image": "^3.2.0",
     "request": "^2.87.0",
+    "xml2js": "^0.4.19",
     "xml2json": "^0.11.2"
   }
 }
