--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "@types/node": "^10.5.5",
     "@types/normalize-package-data": "^2.4.0",
     "@types/qr-image": "^3.2.1",
+    "@types/quick-lru": "^1.1.0",
     "@types/raven": "^2.5.1",
     "@types/read-pkg-up": "^3.0.1",
     "@types/request": "^2.47.1",
