--- a/package.json
+++ b/package.json
@@ -90,6 +90,7 @@
     "amqp": "^0.2.7",
     "amqplib": "^0.5.2",
     "array-flatten": "^2.1.1",
+    "cuid": "^2.1.3",
     "deep-equal": "^1.0.1",
     "flash-store": "^0.5.4",
     "fs-extra": "^6.0.1",
