--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "@types/read-pkg-up": "^3.0.1",
     "@types/request": "^2.47.1",
     "@types/semver": "^5.5.0",
+    "@types/sinon": "^5.0.2",
     "@types/xml2js": "^0.4.3",
     "blue-tape": "^1.0.0",
     "brolog": "^1.6.5",
@@ -70,6 +71,7 @@
     "read-pkg-up": "^4.0.0",
     "semver": "^5.5.0",
     "shx": "^0.3.1",
+    "sinon": "^6.1.5",
     "state-switch": "^0.6.2",
     "ts-node": "^7.0.0",
     "tslint": "^5.10.0",
